--- a/client/web/index.html
+++ b/client/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>client</title>
+  <title>WinWisely99</title>
 </head>
 <body>
   <script src="main.dart.js" type="application/javascript"></script>
