--- a/client/web/index.html
+++ b/client/web/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/placeholder.png">
+  <link rel="manifest" href="assets/icons/manifest.json">
   <title>WinWisely99</title>
 </head>
+
 <body>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
+
 </html>
